--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Lobster&family=Permanent+Marker&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <title>Restaurant Page</title>
+    <title>Crow's Nest Restaurant</title>
     <script src="https://kit.fontawesome.com/c3980f5b8b.js" crossorigin="anonymous"></script>
 </head>
 <body>
